tests/fail/elaboration/unification/mismatch/match-equation-body-exprs.snap
stdout = ''
stderr = '''
error: cannot find `x` in scope
  ┌─ tests/fail/elaboration/unification/mismatch/match-equation-body-exprs.fathom:3:8
  │
3 │ match (x : U8) {
  │        ^ unbound name

error: mismatched types
  ┌─ tests/fail/elaboration/unification/mismatch/match-equation-body-exprs.fathom:5:10
  │
5 │     _ => 4 : U64,
  │          ^^^^^^^ type mismatch, expected `U32`, found `U64`
  │
  = expected `U32`
       found `U64`

error: mismatched types
  ┌─ tests/fail/elaboration/unification/mismatch/match-equation-body-exprs.fathom:6:10
  │
6 │     _ => Type,
  │          ^^^^ type mismatch, expected `U32`, found `Type`
  │
  = expected `U32`
       found `Type`

warning: unreachable pattern
  ┌─ tests/fail/elaboration/unification/mismatch/match-equation-body-exprs.fathom:5:5
  │
5 │     _ => 4 : U64,
  │     ^

warning: unreachable pattern
  ┌─ tests/fail/elaboration/unification/mismatch/match-equation-body-exprs.fathom:6:5
  │
6 │     _ => Type,
  │     ^

'''
